menambahkan top bar

--- a/style.css
+++ b/style.css
@@ -544,3 +544,9 @@
     0% { background-position: 100%; }
     100% { background-position: 0%; }
   }
+
+   /*-----------------------------------*\
+    #TOPBAR
+  \*-----------------------------------*/
+  
+  .topbar { display: none; }
