menambahkan fitur animasi masuk loading

--- a/style.css
+++ b/style.css
@@ -1451,7 +1451,7 @@
   
   
     /**
-     * SERVICE
+     * MELAYANI
      */
   
     .service .container {
@@ -1506,7 +1506,7 @@
   
   
     /**
-     * EVENT
+     * pembaruan terkini
      */
   
     .event .container {
